--- a/SubTitle_GDI/SubTitle_GDI.vcxproj
+++ b/SubTitle_GDI/SubTitle_GDI.vcxproj
@@ -127,7 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="SubTitle_GDI.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="VNSubtitle_GDI.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
