--- a/SubTitle_GDI/SubTitle_GDI.vcxproj.filters
+++ b/SubTitle_GDI/SubTitle_GDI.vcxproj.filters
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="SubTitle_GDI.cpp" />
+    <ClCompile Include="VNSubtitle_GDI.hpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
 </Project>
