--- a/SubTitle_GDI/SubTitle_GDI.vcxproj
+++ b/SubTitle_GDI/SubTitle_GDI.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClInclude Include="TextLayer.hpp" />
     <ClCompile Include="VNSubtitle_GDI.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
