--- a/SubTitle_GDI/SubTitle_GDI.vcxproj.filters
+++ b/SubTitle_GDI/SubTitle_GDI.vcxproj.filters
@@ -4,4 +4,7 @@
     <ClCompile Include="VNSubtitle_GDI.hpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TextLayer.hpp" />
+  </ItemGroup>
 </Project>
