--- a/lib/VNSubtitle/VNSubtitle.vcxproj.filters
+++ b/lib/VNSubtitle/VNSubtitle.vcxproj.filters
@@ -1,11 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="TextLayer.cpp" />
-    <ClCompile Include="BaseLayer.cpp" />
+    <ClCompile Include="BaseLayer.cpp">
+      <Filter>Layer</Filter>
+    </ClCompile>
+    <ClCompile Include="TextLayer.cpp">
+      <Filter>Layer</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TextLayer.h" />
-    <ClInclude Include="BaseLayer.h" />
+    <ClInclude Include="BaseLayer.h">
+      <Filter>Layer</Filter>
+    </ClInclude>
+    <ClInclude Include="TextLayer.h">
+      <Filter>Layer</Filter>
+    </ClInclude>
+    <ClInclude Include="Message.h" />
+    <ClInclude Include="Player.h">
+      <Filter>Player</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Layer">
+      <UniqueIdentifier>{74c8e943-87f5-45e9-89c5-761d889eee14}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Player">
+      <UniqueIdentifier>{0678bb5d-efdd-45d1-8f48-c16aa5c7c19c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
